// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skills renders correctly with a single category 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: #ffffff;
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c0 {
  margin: 4rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1rem;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Skills
      </p>
      <h2
        class="c4 c5"
      >
        What I work with
      </h2>
      <div
        class="c6"
      >
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Frontend
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              React
            </li>
            <li
              class="c9"
            >
              Next.js
            </li>
            <li
              class="c9"
            >
              TypeScript
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`Skills renders correctly with all categories 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: #ffffff;
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c0 {
  margin: 4rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1rem;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Skills
      </p>
      <h2
        class="c4 c5"
      >
        What I work with
      </h2>
      <div
        class="c6"
      >
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Frontend
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              React
            </li>
            <li
              class="c9"
            >
              Next.js
            </li>
            <li
              class="c9"
            >
              TypeScript
            </li>
            <li
              class="c9"
            >
              styled-components
            </li>
            <li
              class="c9"
            >
              Storybook
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Ecommerce
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Shopify
            </li>
            <li
              class="c9"
            >
              Shopify Plus
            </li>
            <li
              class="c9"
            >
              Storefront API
            </li>
            <li
              class="c9"
            >
              Liquid
            </li>
            <li
              class="c9"
            >
              Hydrogen
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            CMS & Data
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Contentful
            </li>
            <li
              class="c9"
            >
              Prismic
            </li>
            <li
              class="c9"
            >
              Algolia
            </li>
            <li
              class="c9"
            >
              REST
            </li>
            <li
              class="c9"
            >
              GraphQL
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Tooling
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Vite
            </li>
            <li
              class="c9"
            >
              Webpack
            </li>
            <li
              class="c9"
            >
              ESLint
            </li>
            <li
              class="c9"
            >
              Jest
            </li>
            <li
              class="c9"
            >
              Vitest
            </li>
            <li
              class="c9"
            >
              Playwright
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Cloud & DevOps
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Vercel
            </li>
            <li
              class="c9"
            >
              AWS
            </li>
            <li
              class="c9"
            >
              GitHub Actions
            </li>
            <li
              class="c9"
            >
              Sentry
            </li>
            <li
              class="c9"
            >
              Chromatic
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Design
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Figma
            </li>
            <li
              class="c9"
            >
              Responsive Design
            </li>
            <li
              class="c9"
            >
              Design Systems
            </li>
            <li
              class="c9"
            >
              Core Web Vitals
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;
